<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <RelativeLayout
            android:id="@+id/rl_tab_home"
            style="@style/MainTabLayoutStyle">

            <ImageView
                android:id="@+id/iv_tab_home"
                style="@style/MainTabImageViewStyle"
                android:src="@drawable/main_tab_home_selector"/>

            <TextView
                style="@style/MainTabTextViewStyle"
                android:layout_below="@id/iv_tab_home"
                android:text="@string/MainHomeTab"/>

            <TextView
                android:id="@+id/tv_unread_home_message_count"
                style="@style/MainTabUnreadCountViewStyle"
                android:layout_alignLeft="@id/iv_tab_home"
                android:layout_alignStart="@id/iv_tab_home"/>

            <View
                android:id="@+id/v_unread_home_message_icon"
                style="@style/MainTabUnreadTipStyle"
                android:layout_alignEnd="@id/iv_tab_home"
                android:layout_alignRight="@id/iv_tab_home"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_doctor"
            style="@style/MainTabLayoutStyle">

            <ImageView
                android:id="@+id/iv_tab_doctor"
                style="@style/MainTabImageViewStyle"
                android:src="@drawable/main_tab_home_selector"/>

            <TextView
                style="@style/MainTabTextViewStyle"
                android:layout_below="@id/iv_tab_doctor"
                android:text="@string/MainDoctorTab"/>

            <TextView
                android:id="@+id/tv_unread_doctor_message_count"
                style="@style/MainTabUnreadCountViewStyle"
                android:layout_alignLeft="@id/iv_tab_doctor"
                android:layout_alignStart="@id/iv_tab_doctor"/>

            <View
                android:id="@+id/v_unread_doctor_message_icon"
                style="@style/MainTabUnreadTipStyle"
                android:layout_alignEnd="@id/iv_tab_doctor"
                android:layout_alignRight="@id/iv_tab_doctor"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_classroom"
            style="@style/MainTabLayoutStyle">

            <ImageView
                android:id="@+id/iv_tab_classroom"
                style="@style/MainTabImageViewStyle"
                android:src="@drawable/main_tab_home_selector"/>

            <TextView
                style="@style/MainTabTextViewStyle"
                android:layout_below="@id/iv_tab_classroom"
                android:text="@string/MainClassroomTab"/>

            <TextView
                android:id="@+id/tv_unread_classroom_message_count"
                style="@style/MainTabUnreadCountViewStyle"
                android:layout_alignLeft="@id/iv_tab_classroom"
                android:layout_alignStart="@id/iv_tab_classroom"/>

            <View
                android:id="@+id/v_unread_classroom_message_icon"
                style="@style/MainTabUnreadTipStyle"
                android:layout_alignEnd="@id/iv_tab_classroom"
                android:layout_alignRight="@id/iv_tab_classroom"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tab_mine"
            style="@style/MainTabLayoutStyle">

            <ImageView
                android:id="@+id/iv_tab_mine"
                style="@style/MainTabImageViewStyle"
                android:src="@drawable/main_tab_home_selector"/>

            <TextView
                style="@style/MainTabTextViewStyle"
                android:layout_below="@id/iv_tab_mine"
                android:text="@string/MainMineTab"/>

            <TextView
                android:id="@+id/tv_unread_mine_message_count"
                style="@style/MainTabUnreadCountViewStyle"
                android:layout_alignLeft="@id/iv_tab_mine"
                android:layout_alignStart="@id/iv_tab_mine"/>

            <View
                android:id="@+id/v_unread_mine_message_icon"
                style="@style/MainTabUnreadTipStyle"
                android:layout_alignEnd="@id/iv_tab_mine"
                android:layout_alignRight="@id/iv_tab_mine"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
